  was still an issue when a Log::Dispatch object was created in a parent
  process and then recreated in the children. If the close_after_write
  parameter was false, then there would be a deadlock.

- Made Syslog work on a threaded Perl when the threads module was not
  explicitly loaded. Fixed by Konrad Bucheli. GitHub #13.


2.53     2016-01-14

- Actually fix File::Locked, this time with some actual tests.


2.52     2016-01-13

- Make File::Locked output do an explicit unlock if the close_after_write
  option is not set. Without this it would open the file once in each process,
  attempting to get a lock at open time, pretty much guaranteeing a deadlock
  in a multiprocess environment. Now it should work sanely whether
  close_after_write is true or not.


2.51     2015-09-19

- Fixed t/08-screen.t on Windows platforms.


2.50     2015-09-02

- Changed how the Screen output handles UTF-8 data once more. The Screen
  module has gone back to printing output directly to the global STDOUT and
  STDERR handles. The previous changes broke the tests for several modules,
  including Log::Dispatch::Config. This change should fix them.


2.49     2015-08-21

- The Screen output now enables autoflush on the handle it uses to send output
  to STDOUT or STDERR every time it sends a message. This does not affect the
  global STDOUT or STDERR, as the Screen module makes its own handle for
  output. This fixes a bug reported by Karen Etheridge that caused this module
  to not play nicely with Capture::Tiny in some cases. RT #106605.


2.48     2015-08-07

- Fixed (I hope) tests that were added in the last release that fail on
  Windows.


2.47     2015-08-06

- Really, really make per-thread locking work. Depending on when threads and
  threads::shared were loaded, you might get an error like 'Type of arg 1 to
  threads::shared::share must be one of $@% at .../Log/Dispatch/Syslog.pm line
  67, near "$thread_lock)"'. Reported by David Schweikert.
